2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: --autolabel any, not --autolabel all

2010-10-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Don't give an error is ssl_ca_info is set
	  and ssl is not used.

2010-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Use property_add_to_argv.
	* client-src/client_util.h (application_property_argv_size):
	  Remove prototype.
	* common-src/conffile.c: Use g_str_amanda_hash and g_str_amanda_equal
	  for property hash.
	* common-src/conffile.c (property_add_to_argv): Remove function
	* common-src/conffile.h (property_add_to_argv): Remove prototype.
	* common-src/glib-util.c (g_str_amanda_hash, g_str_amanda_equal):
	  Add function
	* common-src/glib-util.h (g_str_amanda_hash, g_str_amanda_equal):
	  Add prototype.
	* common-src/util.c (proplist_add_to_argv, property_add_to_argv):
	  Add function.
	* common-src/util.h (proplist_add_to_argv, property_add_to_argv):
	  Add prototype.
	* perl/Amanda/Config.pod: Document amandaify_property_name.
	* perl/Amanda/Config.swg: Add amandaify_property_name.
	* perl/Amanda/Config/FoldingHash.pm: New class.
	* perl/Makefile.am: Add perl/Amanda/Config/FoldingHash.pm
	* perl/amglue/ghashtable.c: Use A::C::FoldingHash.pm for property hash.
	* recover-src/extract_list.c: Use property_add_to_argv
	* installcheck/Amanda_Config.pl: Check property case matching.
	* installcheck/Amanda_Config_FoldingHash.pl:
	  Check Amanda::Config::FoldingHash.
	* installcheck/Makefile.am:
	  Add installcheck/Amanda_Config_FoldingHash.pl

2010-10-07  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amoverview.8.xml: fix typos in usage
	* server-src/amoverview.pl: config is mandatory; --config is not

2010-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Log packet sent and received.

2010-10-07  Dustin J. Mitchell <dustin@zmanda.com>