@@ -1,4 +1,7 @@
 2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
+	* installcheck/amvault.pl: update the tests to use --autolabel=any
+
+2010-10-08  Dustin J. Mitchell <dustin@zmanda.com>
 	* server-src/amvault.pl: --autolabel any, not --autolabel all
 
 2010-10-08  Jean-Louis Martineau <martineau@zmanda.com>
